--- a/src/views/tasks/agregar.hbs
+++ b/src/views/tasks/agregar.hbs
@@ -1,8 +1,9 @@
 <form action="" method="POST" class="container text-center mt-4">
-    <input type="text" name="id" placeholder="id"> 
-    <input type="text" name="codigo" placeholder="title"> 
-    <input type="text" name="nombre" placeholder="title"> 
-    <input type="text" name="precio" placeholder="title"> 
-    <input type="text" name="stock" placeholder="title"> 
+    {{!-- <input type="text" name="id" placeholder="id">  --}}
+    <input type="text" name="codigo" placeholder="codigo"> 
+    <input type="text" name="nombre" placeholder="nombre"> 
+    <input type="text" name="precio" placeholder="precio"> 
+    <input type="text" name="stock" placeholder="stock"> 
+    <input type="text" name="presentacion" placeholder="presentacion"> 
     <button type="submit">submit</button>
 </form>
