--- a/src/views/tasks/venta.hbs
+++ b/src/views/tasks/venta.hbs
@@ -1,3 +1,10 @@
-<table class="">
-
-</table>
+<tbody>
+    <form action="venta/nueva">
+        <input type="text" name="codigo">
+    </form>
+    <ul>
+        <li class="article">codigo:{{codigo}}</li>
+        <li class="article">nombre:{{nombre}}</li>
+        <li class="article">precio:{{precio}}</li>
+    </ul>
+</tbody>
