medidas de seguridad añadidas

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,5 +1,5 @@
-<div class="container text-center">
-<a class="border bg-secondary-subtle rounded-1 m-3 border-secondary-subtle" href="/tasks">buscar producto</a>
-<a class="border bg-secondary-subtle rounded-1 m-3 border-secondary-subtle"  href="/agregar">agregar producto</a>
-<a class="border bg-secondary-subtle rounded-1 m-3 border-secondary-subtle"  href="/venta">generar venta</a>
+<div class="container text-center bg-secondary rounded-2 p-5">
+    <a class="border bg-primary-subtle rounded-1 m-3 border-secondary-subtle p-2" href="/tasks">buscar producto</a>
+    <a class="border bg-primary-subtle rounded-1 m-3 border-secondary-subtle p-2"  href="/agregar">agregar producto</a>
+    <a class="border bg-primary-subtle rounded-1 m-3 border-secondary-subtle p-2"  href="/venta">generar venta</a>
 </div>
