--- a/src/views/tasks/nueva.hbs
+++ b/src/views/tasks/nueva.hbs
@@ -5,7 +5,7 @@
             {{#each productos}}
             <ul class="articles">
                 <li class="article">codigo:{{codigo}}</li>
-                <li class="article">nombre:{{nombre}}   x{{presentacion}}kg</li>
+                <li class="article">nombre:{{nombre}}</li>
                 <li class="article">precio:{{precio}}</li>
                 <li class="article">stock:{{stock}}</li>
             </ul>
