--- a/src/views/tasks/venta.hbs
+++ b/src/views/tasks/venta.hbs
@@ -1,10 +1,5 @@
 <tbody>
-    <form action="venta/nueva">
+    <form action="/tasks/nueva">
         <input type="text" name="codigo">
     </form>
-    <ul>
-        <li class="article">codigo:{{codigo}}</li>
-        <li class="article">nombre:{{nombre}}</li>
-        <li class="article">precio:{{precio}}</li>
-    </ul>
 </tbody>
