--- a/src/views/tasks/index.hbs
+++ b/src/views/tasks/index.hbs
@@ -2,7 +2,7 @@
 <tbody>
     <div class="container text-center">
         <form action="tasks/search" method="GET">
-            <input type="text" name="codigo" placeholder="search...">
+            <input type="text" name="nombre" placeholder="search...">
         </form>
     </div>
     <div class="all-container">
