--- a/src/views/tasks/search.hbs
+++ b/src/views/tasks/search.hbs
@@ -1,5 +1,10 @@
 <link rel="stylesheet" href="/css/articles.css">
 <tbody>
+    <div class="container text-center">
+        <form action="search" method="GET">
+            <input type="text" name="nombre" placeholder="search...">
+        </form>
+    </div>
     <div class="all-container">
         <div class="articles-container">
             {{#each productos}}
