--- a/src/views/tasks/venta.hbs
+++ b/src/views/tasks/venta.hbs
@@ -1,5 +1,15 @@
 <tbody>
-    <form action="/tasks/nueva">
+    <style>.articles{display:inline-block;}</style>
+    <form action="">
         <input type="text" name="codigo">
     </form>
+    {{#each data}}
+        <ul class="articles">
+            <li class="article">codigo:<b>{{codigo}}</b></li>
+            <li class="article" id="nombre">nombre:<b>{{nombre}} x{{presentacion}}kg</b></li>
+            <li class="article" id="precio">precio:<b>${{precio}}</b></li>
+            <li class="article">stock:<b>{{stock}}</b></li>
+        </ul>
+    {{/each}}
+    {{!-- <script src="venta.js"></script> --}}
 </tbody>
