--- a/src/views/tasks/search.hbs
+++ b/src/views/tasks/search.hbs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/css/articles.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 <tbody>
     <div class="container text-center">
         <form action="search" method="GET">
@@ -13,7 +14,9 @@
                 <li class="article">nombre:{{nombre}}   x{{presentacion}}kg</li>
                 <li class="article">precio:{{precio}}</li>
                 <li class="article">stock:{{stock}}</li>
+                <li class="article"><i class="bi bi-trash"></i></li>
             </ul>
+
             {{/each}}
         </div>
     </div>
