--- a/src/views/tasks/agregar.hbs
+++ b/src/views/tasks/agregar.hbs
@@ -2,7 +2,7 @@
     {{!-- <input type="text" name="id" placeholder="id">  --}}
     <input type="text" name="codigo" placeholder="codigo"> 
     <input type="text" name="nombre" placeholder="nombre"> 
-    <input type="number00000000000" name="precio" placeholder="precio"> 
+    <input type="number" name="precio" placeholder="precio"> 
     <input type="number" name="stock" placeholder="stock"> 
     <input type="number" name="presentacion" placeholder="presentacion"> 
     <button type="submit">submit</button>
