mejora del UI e integracion de sistema de aumentos y calculo de porcentajes

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/css/home.css">
 <div class="container text-center bg-secondary rounded-2 p-5">
     <a class="border bg-primary-subtle rounded-1 m-3 border-secondary-subtle p-2" href="/tasks">buscar producto</a>
     <a class="border bg-primary-subtle rounded-1 m-3 border-secondary-subtle p-2"  href="/agregar">agregar producto</a>
