--- a/src/views/tasks/index.hbs
+++ b/src/views/tasks/index.hbs
@@ -4,6 +4,8 @@
         <form action="tasks/search" method="GET">
             <input type="text" name="nombre" placeholder="search...">
         </form>
+        <input type="checkbox" id="selectall">
+        <button id="edit-selected"><i class="bi bi-pencil-fill"></i></button>
     </div>
     <div class="all-container">
         <div class="articles-container">
@@ -14,60 +16,10 @@
                 <li class="article">precio:<b>${{precio}}</b><button class="edit-price" data-id="{{id}}" data-modifier="precio"><i class="bi bi-pencil-fill"></i></button></li>
                 <li class="article">stock:<b>{{stock}}</b><button class="edit-stock" data-id="{{id}}" data-modifier="stock"><i class="bi bi-pencil-fill"></i></button></li>
                 <li class="article"><button class="trashcan" data-codigo="{{codigo}}"><i class="bi bi-trash"></i></button></li>
+                <li class="article"><input class="select" type="checkbox"  data-id="{{id}}"></input></li>
             </ul>
         {{/each}}
         </div>
     </div>
-    <script>
-        const trashcans = document.getElementsByClassName("trashcan")
-        for(let trashcan of trashcans){
-            const cod = trashcan.dataset.codigo
-            trashcan.addEventListener("click", function(){
-                let booleano = confirm("queres borrar " + trashcan.dataset.codigo + "?")
-                fetch("/erase/"+cod).then(response => response.json()).then(window.location.reload())
-                .catch(e => console.log(e))
-            })
-        }
-        const codePencils = document.getElementsByClassName("edit-code")
-        for(let codePencil of codePencils){
-            const id = codePencil.dataset.id
-            const cod = codePencil.dataset.modifier
-            codePencil.addEventListener('click', function(){
-                let info = prompt("Inserte el nuevo código:")
-                fetch("/edit/"+id+"/"+cod+"/"+info).then(response => response.json()).then(window.location.reload())
-                .catch(e => console.log(e))
-            })
-        }
-        const namePencils = document.getElementsByClassName("edit-name")
-        for(let namePencil of namePencils){
-            const id = namePencil.dataset.id
-            const cod = namePencil.dataset.modifier
-            namePencil.addEventListener('click', function(){
-                let info = prompt("Inserte el nuevo código:")
-                fetch("/edit/"+id+"/"+cod+"/"+info).then(response => response.json()).then(window.location.reload())
-                .catch(e => console.log(e))
-            })
-        }
-        const pricePencils = document.getElementsByClassName("edit-price")
-        for(let pricePencil of pricePencils){
-            const id = pricePencil.dataset.id
-            const cod = pricePencil.dataset.modifier
-            pricePencil.addEventListener('click', function(){
-                let info = prompt("Inserte el nuevo código:")
-                fetch("/edit/"+id+"/"+cod+"/"+info).then(response => response.json()).then(window.location.reload())
-                .catch(e => console.log(e))
-            })
-        }
-        const stockPencils = document.getElementsByClassName("edit-stock")
-        for(let stockPencil of stockPencils){
-            const id = stockPencil.dataset.id
-            const cod = stockPencil.dataset.modifier
-            stockPencil.addEventListener('click', function(){
-                let info = prompt("Inserte el nuevo código:")
-                fetch("/edit/"+id+"/"+cod+"/"+info).then(response => response.json()).then(window.location.reload())
-                .catch(e => console.log(e))
-            })
-        }
-
-    </script>
+    <script src="/js/gallery.js"></script>
 </tbody>
