--- a/src/views/tasks/venta.hbs
+++ b/src/views/tasks/venta.hbs
@@ -1,36 +1,14 @@
 <tbody>
-    <style>.articles{display:inline-block; background-color: black; color: white; border: 1px solid white;}</style>
-    <input type="text" name="codigo" id="codinp">
-    <button id="search">search</button>
-        <div id="content">
-
+    <link rel="stylesheet" href="/css/ventas.css">
+        <div class="container text-center">
+            <input type="text" name="codigo" id="codinp">
+            <button id="search">search</button>  
+            <button id="generarventa">next</button>
         </div>
-    <button id="generarventa">next</button>
-    <script>
-        const codinp = document.getElementById("codinp")
-        const searchb = document.getElementById("search")
-        const content = document.getElementById("content")
-        const generarventa = document.getElementById("generarventa")
-        searchb.addEventListener('click', function(){
-            const cod = codinp.value
-            content.innerHTML = ""
-            fetch('nuevaventa/'+cod).then(response => response.json()).then(response => response.productos.forEach((e) => {
-                const nombre = document.createElement('li')
-                const precio = document.createElement('li')
-                const list = document.createElement ('ul')
-                nombre.textContent = e.name
-                precio.textContent = e.price
-                list.classList = 'articles'
-                nombre.classList = "article"
-                precio.classList = "article"
-                list.appendChild(nombre)
-                list.appendChild(precio)
-                content.appendChild(list)
-            }))
-            .catch(e => console.log(e))
-        })
-        generarventa.addEventListener('click', function(){
-            fetch('almacenarventa').then(response => response.json()).then(r => console.log(r))
-        })
-    </script>
+        <div class="all-container">
+            <div id="content" class="articles-container">
+
+            </div>
+        </div>
+    <script src="/js/ventas.js"></script>
 </tbody>
