--- a/src/views/tasks/agregar.hbs
+++ b/src/views/tasks/agregar.hbs
@@ -1,15 +1,18 @@
-<form action="" method="POST" class="container text-center mt-4">
-    {{!-- <input type="text" name="id" placeholder="id">  --}}
-    <input type="text" name="codigo" placeholder="codigo"> 
-    <input type="text" name="nombre" placeholder="nombre"> 
-    <input type="number" name="precio" placeholder="precio"> 
-    <input type="number" name="stock" placeholder="stock"> 
-    <input type="number" name="presentacion" placeholder="presentacion"> 
-    <button type="submit">submit</button>
-</form>
-{{#each productos}}
-    <p>ya existe un producto con el código {{codigo}}</p>
-{{/each}}
-{{#messages}}
-    <p>completar campos faltantes</p>
-{{/messages}}
+<tbody>
+    <link rel="stylesheet" href="/css/agregar.css">
+    <form action="" method="POST" class="container text-center mt-4 form">
+        {{!-- <input type="text" name="id" placeholder="id">  --}}
+        <input type="text" name="codigo" placeholder="codigo" class="text-place"> 
+        <input type="text" name="nombre" placeholder="nombre" class="text-place"> 
+        <input type="number" name="precio" placeholder="precio" class="text-place"> 
+        <input type="number" name="stock" placeholder="stock" class="text-place"> 
+        <input type="number" name="presentacion" placeholder="presentacion" class="text-place"> 
+        <button type="submit" class="button">submit</button>
+    </form>
+    {{#each productos}}
+        <p>ya existe un producto con el código {{codigo}}</p>
+    {{/each}}
+    {{#messages}}
+        <p>completar campos faltantes</p>
+    {{/messages}}
+</tbody>
