--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -3,4 +3,5 @@
     <a class="border bg-primary-subtle rounded-1 m-3 border-secondary-subtle p-2" href="/tasks">buscar producto</a>
     <a class="border bg-primary-subtle rounded-1 m-3 border-secondary-subtle p-2"  href="/agregar">agregar producto</a>
     <a class="border bg-primary-subtle rounded-1 m-3 border-secondary-subtle p-2"  href="/venta">generar venta</a>
+    <a class="border bg-primary-subtle rounded-1 m-3 border-secondary-subtle p-2"  href="/verventas">ver ventas</a>
 </div>
