--- a/src/views/tasks/index.hbs
+++ b/src/views/tasks/index.hbs
@@ -1,11 +1,12 @@
 <link rel="stylesheet" href="/css/ventas.css">
 <tbody>
     <div class="container text-center">
-        <form action="tasks/search" method="GET">
+        <form action="tasks/search" method="GET" class="mb-5 mt-5">
+        <label for="nombre">
+            buscar por codigo o nombre:
+        </label>
             <input type="text" name="nombre" placeholder="search...">
         </form>
-        <input type="checkbox" id="selectall">
-        <button id="edit-selected"><i class="bi bi-pencil-fill"></i></button>
         <form action="/subir-csv" method="POST" enctype="multipart/form-data" id="formcsv">
             <label for="csvFile">introducir hoja de calculo:</label>
             <input type="file" id="csvinp" name="csvFile" accept=".csv"><br>
@@ -13,17 +14,20 @@
         </form>
     </div>
     <div class="all-container">
-        <div class="articles-container">
-            <ul class="articles-ul">
+        <div class="container bg-secondary p-0 m-0 ">
+            <ul class="row p-0 m-0 d-flex gap-1 d-flex justify-content-center mt-3">
                 {{#each productos}}
-                    <ul class="articles">
-                        <li class="article">codigo:<b>{{codigo}}</b><button class="edit-code" data-id="{{id}}" data-modifier="codigo"><i class="bi bi-pencil-fill"></i></button></li>
-                        <li class="article">nombre:<b>{{nombre}} x{{presentacion}}kg</b><button class="edit-name" data-id="{{id}}" data-modifier="nombre"><i class="bi bi-pencil-fill"></i></button></li>
-                        <li class="article">precio:<b>${{precio}}</b><button class="edit-price" data-id="{{id}}" data-modifier="precio"><i class="bi bi-pencil-fill"></i></button></li>
-                        <li class="article">stock:<b>{{stock}}</b><button class="edit-stock" data-id="{{id}}" data-modifier="stock"><i class="bi bi-pencil-fill"></i></button></li>
-                        <li class="article"><button class="trashcan" data-codigo="{{codigo}}"><i class="bi bi-trash"></i></button></li>
-                        <li class="article"><input class="select" type="checkbox" data-id="{{id}}"></input></li>
-                    </ul>
+                <div class="card col-sm-6 col-md-4 p-0 gap-1">
+                    <div class="card-body">
+                        <ul class="p0 bg-white">
+                            <li class="d-flex justify-content-between ">codigo: {{codigo}}<button class="edit-code" data-id="{{id}}" data-modifier="codigo"><i class="bi bi-pencil-fill"></i></button></li>
+                            <li class="d-flex justify-content-between ">nombre: {{nombre}} x{{presentacion}}kg</b><button class="edit-name" data-id="{{id}}" data-modifier="nombre"><i class="bi bi-pencil-fill"></i></button></li>
+                            <li class="d-flex justify-content-between ">precio: ${{precio}}</b><button class="edit-price" data-id="{{id}}" data-modifier="precio"><i class="bi bi-pencil-fill"></i></button></li>
+                            <li class="d-flex justify-content-between ">stock: {{stock}}</b><button class="edit-stock" data-id="{{id}}" data-modifier="stock"><i class="bi bi-pencil-fill"></i></button></li>
+                            <li class="d-flex justify-content-center "><button class="trashcan" data-codigo="{{codigo}}"><i class="bi bi-trash"></i></button></li>
+                        </ul>
+                    </div>
+                </div>
                 {{/each}}
             </ul>
         </div>
