--- a/src/views/tasks/search.hbs
+++ b/src/views/tasks/search.hbs
@@ -1,4 +1,5 @@
-<link rel="stylesheet" href="/css/articles.css">
+<link rel="stylesheet" href="/css/ventas.css">
+
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 <tbody>
     <div class="container text-center">
@@ -7,22 +8,25 @@
         </form>
     </div>
     <div class="all-container">
-        <input type="checkbox" id="selectall">
-        <div class="articles-container">
-            {{#each productos}}
-            <ul class="articles">
-                <li class="article">codigo:{{codigo}}</li>
-                <li class="article">nombre:{{nombre}}   x{{presentacion}}kg</li>
-                <li class="article">precio:{{precio}}</li>
-                <li class="article">stock:{{stock}}</li>
-                <li class="article"><i class="bi bi-trash"></i></li>
-                <li class="article"><input class="select" type="checkbox"></input></li>
-                <li class="article"><button class="comps" data-precio="{{precio}}">compare</button></li>
+        <div class="container bg-secondary p-0 m-0 ">
+            <ul class="row p-0 m-0 d-flex gap-1 d-flex justify-content-center mt-3">
+                {{#each productos}}
+                <div class="card col-sm-6 col-md-4 p-0 gap-1">
+                    <div class="card-body">
+                        <ul class="p0 bg-white">
+                            <li class="d-flex justify-content-between ">codigo: {{codigo}}<button class="edit-code" data-id="{{id}}" data-modifier="codigo"><i class="bi bi-pencil-fill"></i></button></li>
+                            <li class="d-flex justify-content-between ">nombre: {{nombre}} x{{presentacion}}kg</b><button class="edit-name" data-id="{{id}}" data-modifier="nombre"><i class="bi bi-pencil-fill"></i></button></li>
+                            <li class="d-flex justify-content-between ">precio: ${{precio}}</b><button class="edit-price" data-id="{{id}}" data-modifier="precio"><i class="bi bi-pencil-fill"></i></button></li>
+                            <li class="d-flex justify-content-between ">stock: {{stock}}</b><button class="edit-stock" data-id="{{id}}" data-modifier="stock"><i class="bi bi-pencil-fill"></i></button></li>
+                            <li class="d-flex justify-content-center "><button class="trashcan" data-codigo="{{codigo}}"><i class="bi bi-trash"></i></button></li>
+                        </ul>
+                    </div>
+                </div>
+                {{/each}}
             </ul>
-
-            {{/each}}
         </div>
     </div>
+    {{!-- <script src="/js/gallery"></script> --}}
     <script>
         const selectall = document.getElementById("selectall")
         const selects = document.getElementsByClassName("select")
