--- a/src/views/tasks/venta.hbs
+++ b/src/views/tasks/venta.hbs
@@ -1,6 +1,6 @@
 <tbody>
     <link rel="stylesheet" href="/css/ventas.css">
-        <h1 style="width: 100vw; text-align:center">Ventas</h1>
+        <h1 style="width: 100vw; text-align:center">Nueva Venta</h1>
         <div class="all-container">
             <div class="articles-container">
                 <ul id="content" class="articles-ul">
