--- a/src/views/tasks/agregar.hbs
+++ b/src/views/tasks/agregar.hbs
@@ -7,6 +7,7 @@
         <input type="number" name="precio" placeholder="precio" class="text-place"> 
         <input type="number" name="stock" placeholder="stock" class="text-place"> 
         <input type="number" name="presentacion" placeholder="presentacion" class="text-place"> 
+        <input type="number" name="objetivo" placeholder="objetivo" class="text-place"> 
         <button type="submit" class="button">submit</button>
     </form>
     {{#each productos}}
