--- a/src/views/tasks/index.hbs
+++ b/src/views/tasks/index.hbs
@@ -24,8 +24,12 @@
                         <ul class="p0 bg-white">
                             <li class="d-flex justify-content-between ">codigo: {{codigo}}<button class="edit-code" data-id="{{id}}" data-modifier="codigo"><i class="bi bi-pencil-fill"></i></button></li>
                             <li class="d-flex justify-content-between ">nombre: {{nombre}} x{{presentacion}}kg</b><button class="edit-name" data-id="{{id}}" data-modifier="nombre"><i class="bi bi-pencil-fill"></i></button></li>
-                            <li class="d-flex justify-content-between ">precio: ${{precio}}</b><button class="edit-price" data-id="{{id}}" data-modifier="precio"><i class="bi bi-pencil-fill"></i></button></li>
+                            <li class="d-flex justify-content-between ">precio lista: ${{precio}}</b><button class="edit-price" data-id="{{id}}" data-modifier="precio"><i class="bi bi-pencil-fill"></i></button></li>
+                            <li class="d-flex justify-content-between ">precio publico: ${{precioventa}}</b><button class="edit-price" data-id="{{id}}" data-modifier="precio"><i class="bi bi-pencil-fill"></i></button></li>
+                            <li class="d-flex justify-content-between ">precio granel: ${{granel}}</b><button class="edit-price" data-id="{{id}}" data-modifier="precio"><i class="bi bi-pencil-fill"></i></button></li>
                             <li class="d-flex justify-content-between ">stock: {{stock}}</b><button class="edit-stock" data-id="{{id}}" data-modifier="stock"><i class="bi bi-pencil-fill"></i></button></li>
+                            <li class="d-flex justify-content-between ">objetivo: {{objetivo}}</li>
+                            <li class="d-flex justify-content-between ">comprar: {{comprar}}</li>
                             <li class="d-flex justify-content-center "><button class="trashcan" data-codigo="{{codigo}}"><i class="bi bi-trash"></i></button></li>
                         </ul>
                     </div>
